[package]
name = "transaction_processing"
version = "0.1.0"
authors = ["vladhateganos <vladhateganos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = "1.0.128"

[dependencies.mongodb]
version = "1.2.0"
default-features = false
features = ["sync"]
